--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,3 +1,8 @@
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}" />
+body {
+    background: white url("images/background.jpg") no-repeat right bottom;
+}
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
